# mint-bill

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  admin-system.cmb  admin-system.service  email.html  email.txt  mint-bill-schema.sql  mint-bill.db
.github/workflows/: admin-system.yml
app/include/: admin-system.h  admin.h  admin_system.h  config.h  errors.h  mint_bill.h
app/source/: admin_system.cpp  main.cpp  mint_bill.cpp
controllers/: CMakeLists.txt
controllers/include/: admin_controller.h  business_info.h  client_invoice.h  client_register.h  client_statement.h  controllers.h  interfaces.h
controllers/source/: admin_controller.cpp  client_invoice.cpp
controllers/tests/: admin_controller_test.cpp  business_feature_test.cpp  client_invoice_test.cpp
data/: CMakeLists.txt  README.md
data/include/: admin_data.h  billing_data.h  business_data.h  client_data.h  column_data.h  data.h  email_data.h  final_invoice_data.h  invoice_column.h  invoice_data.h  pdf_invoice_data.h  pdf_statement_data.h  statement_column.h  statement_data.h
data/mocks/include/: mock_pdf_invoice_data.h
data/mocks/source/: mock_pdf_invoice_data.cpp
data/source/: admin_data.cpp  billing_data.cpp  business_data.cpp  client_data.cpp  column_data.cpp  email_data.cpp  final_invoice_data.cpp  invoice_column.cpp  invoice_data.cpp  pdf_invoice_data.cpp  pdf_statement_data.cpp  statement_column.cpp  statement_data.cpp
data/tests/: admin_data_test.cpp  billing_data_test.cpp  business_data_test.cpp  client_data_test.cpp  column_data_test.cpp  columns_data_test.cpp  email_data_test.cpp  final_invoice_data_test.cpp  invoice_columns_test.cpp  invoice_data_test.cpp  pdf_invoice_data_test.cpp  pdf_statement_data_test.cpp  statement_column_data_test.cpp  statement_data_test.cpp
docs/: README.md  admin-system.gaphor
features/: CMakeLists.txt  README.md
features/include/: app_features.h  business.h  business_feature.h  business_info.h  client.h  client_invoice.h  client_register.h  client_statement.h  email.h  feature.h  interfaces.h  invoice.h  invoice_pdf.h  password_manager.h  pdf.h  statement_pdf.h
features/source/: business.cpp  business_feature.cpp  business_info.cpp  client_invoice.cpp  client_register.cpp  client_statement.cpp  email.cpp  invoice_pdf.cpp  password_manager.cpp  pdf.cpp  statement_pdf.cpp
features/tests/: business_feature_test.cpp  client_feature_test.cpp  client_invoice_test.cpp  client_statement_feature_test.cpp  email_test.cpp  generate_invoice_pdf_test.cpp  generate_pdf_test.cpp  generate_statement_pdf_test.cpp  password_manager_test.cpp
features/tests/include/: generate_pdf.h
features/tests/source/: generate_pdf.cpp
gui/: CMakeLists.txt  README.md  admin-system.cmb  admin-system.css  admin-system.ui  admin_system.css  invoice-system.cmb  invoice-system.ui  mint-bill.cmb  mint-bill.ui  mint-bill.ui.cmb
gui/components/: CMakeLists.txt  README.md
gui/components/include/: gui_parts.h  part.h  printer.h  stack.h
gui/components/source/: gui_parts.cpp  printer.cpp  stack.cpp
gui/components/tests/: gui_parts_tests.cpp  printer_test.cpp  stack_test.cpp
gui/include/: admin_page.h  business_info_page.h  business_page.h  client_register_page.h  gui.h  gui_parts.h  invoice_page.h  main_window.h  part.h  statement_page.h
gui/invoice_page/: CMakeLists.txt
gui/invoice_page/include/: invoice_page.h  known_invoices.h
gui/invoice_page/source/: invoice_page.cpp  known_invoices.cpp
gui/source/: admin_page.cpp  business_info_page.cpp  business_page.cpp  client_register_page.cpp  gui_parts.cpp  invoice_page.cpp  main_window.cpp  statement_page.cpp
gui/tests/: gui_parts_tests.cpp  statement_page_test.cpp  view_test.cpp
models/: CMakeLists.txt  README.md
models/include/: admin_model.h  admin_serialize.h  business_serialize.h  client_invoice.h  client_model.h  client_register.h  client_serialize.h  client_statement.h  invoice_model.h  invoice_serialize.h  models.h  serialize.h  serialize_admin.h  statement_model.h  statement_serialize.h
models/source/: admin_model.cpp  admin_serialize.cpp  business_serialize.cpp  client_model.cpp  client_serialize.cpp  client_statement.cpp  invoice_model.cpp  invoice_serialize.cpp  serialize_admin.cpp  statement_model.cpp  statement_serialize.cpp
models/tests/: admin_model_test.cpp  client_model_test.cpp  client_statement_feature_test.cpp  invoice_model_test.cpp  serialize_admin_test.cpp  serialize_sql_data_test.cpp  statement_model_test.cpp
scripts/: README.md  build.sh  install.sh  mint-bill.sh  mintbill.sh  statistics.sh  test.sh
storage/: CMakeLists.txt  README.md
storage/include/: sql.h  sqlite.h  storage.h
storage/mocks/include/: client_sql_mock.h
storage/mocks/source/: client_sql_mock.cpp
storage/source/: sql.cpp  sqlite.cpp
storage/tests/: encrypted_test.db  model_test.db  sql_test.cpp  sql_wrapper_test.db  sqlite_test.cpp  test.cpp  verification.cpp
test/: Makefile  email.html  email.txt  main_test.cpp  test.db
utility/: CMakeLists.txt  README.md
utility/include/: boundary_slicer.h  date_manager.h  file.h  slicer.h  word_slicer.h
utility/source/: boundary_slicer.cpp  date_manager.cpp  file.cpp  slicer.cpp  word_slicer.cpp
utility/tests/: boundary_slicer_test.cpp  date_manager_test.cpp  file_test.cpp  slicer_test.cpp  test.cpp  word_slicer_test.cpp
